src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Unit_Time_Split__c</fullName>
        <formula>DWA__c + Myanmar__c + DLAC__c + DMoz__c + DSI__c + INC__c + DSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Unit Time Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Department_Time_Split__c</fullName>
        <formula>Global_Services__c + Data__c + Tech__c + Ops__c + Marketing_Communications__c + BizDev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Department Time Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Stock_Value__c</fullName>
        <formula>Stock_Value_Day_1__c   *   Stock_Options__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Termination__c</fullName>
        <label>Type of Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Involuntary: the company elects to end the employment relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary: employee elects to end employment; resignation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USD_Currency_Per_Pay_period__c</fullName>
        <formula>Pay_Rate__c/Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pay per Period in Local Currency</inlineHelpText>
        <label>USD_Currency_Per_Pay_period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unloaded_Daily_Rate__c</fullName>
        <formula>Annual_Salary_in_USD__c /(260*Per_Week_Hours__c /40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Annual Salary USD over 260 working days</inlineHelpText>
        <label>Unloaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VISA_No__c</fullName>
        <label>VISA No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISA_Type__c</fullName>
        <label>VISA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tourist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intracompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-1/OPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-1A/B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERM/GC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vacation_Days__c</fullName>
        <label>Vacation Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visa_Expiration_Date__c</fullName>
        <label>Visa Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_ID__c</fullName>
        <label>Voter ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X401K_Payroll_Deduction__c</fullName>
        <label>Traditional 401K Deduction ($ or %)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <label>401K</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Comp__c</fullName>
        <formula>Salary__c  +  Bonus_Potential__c  +  Total_Stock_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Years_of_exp__c</fullName>
        <label>Prior Years of Exp.</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>Contractors</fullName>
        <columns>NAME</columns>
        <columns>Employee_Status__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contractors</label>
    </listViews>
    <listViews>
        <fullName>Employees_by_Language</fullName>
        <columns>NAME</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>Employee_Last_Name__c</columns>
        <columns>Language_1_Proficiency__c</columns>
        <columns>Language_2_Proficiency__c</columns>
        <columns>Language_3_Proficiency__c</columns>
        <columns>Language_4_Proficiency__c</columns>
        <columns>Language_5_Proficiency__c</columns>
        <columns>Language_6_Proficiency__c</columns>
        <columns>Languages_Spoken__c</columns>
        <columns>Language_Spoken_2__c</columns>
        <columns>Language_Spoken_3__c</columns>
        <columns>Language_Spoken_4__c</columns>
        <columns>Language_Spoken_5__c</columns>
        <columns>Language_Spoken_6__c</columns>
        <filterScope>Everything</filterScope>
        <label>Employees by Language</label>
    </listViews>
    <listViews>
        <fullName>FullTimeEmployees</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>SF_User__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full Time Employees</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExchangeRateHistoryValidation</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; (
(ISNULL(Effective_Exchange_Rate_Date__c) &amp;&amp; NOT(ISNULL(Exchange_Rate__c)))))
|| (ISCHANGED(Exchange_Rate__c) &amp;&amp; NOT(ISCHANGED(Effective_Exchange_Rate_Date__c)))</errorConditionFormula>
        <errorMessage>You must update Exchange Rate with Exchange Rate Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalaryHistoryValidation</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; (
(ISNULL(Effective_Salary_Date__c) &amp;&amp; NOT(ISNULL(Salary__c)))))
|| (ISCHANGED(Salary__c) &amp;&amp; NOT(ISCHANGED(Effective_Salary_Date__c)))</errorConditionFormula>
        <errorMessage>You must update Salary with Effective Date</errorMessage>
    </validationRules>
</CustomObject>